--- a/html/BGT.html
+++ b/html/BGT.html
@@ -8,49 +8,39 @@
 <body>
 <div id="BGT" class="br BGT hide_js">
   <h2><em>Basisregistratie</em> Grootschalige Topografie</h2>
-  <div class="tab">
-    <h2><abbr title="Basisregistratie grootschalige Topografie">BGT</abbr></h2>
-    <div class="statusBasisregistratie">
-      <p>Deze basisregistratie is niet gereed</p>
-    </div>
-    <p>Verplicht gebruik per 1 januari 2017.</p>
-    <div class="zij">
-      <h3><abbr title="Basisregistratie grootschalige Topografie">BGT</abbr> maakt gebruik van</h3>
-      <ul>
-        <li class="nietgereed">
-          <div class="statusVerbinding">(Verbinding niet gereed)</div>
-          <a class="gereed" href="#BAG"><abbr title="Basisregistraties Adressen en Gebouwen">BAG</abbr></a> </li>
-      </ul>
-    </div>
-    <div class="ik">
-      <h3><abbr title="Basisregistratie grootschalige Topografie">BGT</abbr></h3>
-      <ul>
-        <li class="geo"><img class="geometrie" src="' . DO_STELSELPLAAT_BASE_URL . 'images/geo.svg" alt="Icon - Bevat geometrie" width="20" height="20" /> Grootschalig topografisch object</li>
-        <li class="geo"><img class="geometrie" src="' . DO_STELSELPLAAT_BASE_URL . 'images/geo.svg" alt="Icon - Bevat geometrie" width="20" height="20" /> Lijnelement</li>
-      </ul>
-    </div>
-    <div class="zij">
-      <h3><abbr title="Basisregistratie grootschalige Topografie">BGT</abbr> wordt gebruikt door</h3>
-      <ul>
-        <li class="nietgereed">
-          <div class="statusVerbinding">(Verbinding niet gereed)</div>
-          <a class="gereed" href="#BRK"><abbr title="Basisregistratie Kadaster">BRK</abbr></a> </li>
-        <li class="nietgereed">
-          <div class="statusVerbinding">(Verbinding niet gereed)</div>
-          <a class="gereed" href="#BRT"><abbr title="Basisregistratie Topografie">BRT</abbr></a> </li>
-      </ul>
-    </div>
-    <div class="leverancier">
-      <h3><abbr title="Basisregistratie grootschalige Topografie">BGT</abbr> levert de volgende gegevens door:</h3>
-      <ul>
-        <li class="nietgereed">Pand-ID
-          <div class="statusDoorlevering">(Doorlevering niet gereed)</div>
-          <em>01-01-2016</em></li>
-      </ul>
-      <p><em>Doorlevering is gereed (groen) wanneer het doorgeleverde gegeven in de reguliere producten van de basisregistratie is opgenomen</em></p>
-    </div>
+  <h2><abbr title="Basisregistratie grootschalige Topografie">BGT</abbr></h2>
+  <div class="statusBasisregistratie">
+    <p>Deze basisregistratie is niet gereed</p>
+  </div>
+  <p>Verplicht gebruik per 1 januari 2017.</p>
+  <div class="zij">
+    <h3> maakt gebruik van</h3>
+    <ul>
+      <li class="nietgereed"> <a class="gereed" href="#BAG"><abbr title="Basisregistraties Adressen en Gebouwen">BAG</abbr></a> </li>
+    </ul>
+  </div>
+  <div class="ik">
+    <h3>&nbsp;</h3>
+    <ul>
+      <li class="geo">__GEOMETRIE__ Grootschalig topografisch object</li>
+      <li class="geo">__GEOMETRIE__ Lijnelement</li>
+    </ul>
+  </div>
+  <div class="zij">
+    <h3> wordt gebruikt door</h3>
+    <ul>
+      <li class="nietgereed"> <a class="gereed" href="#BRK"><abbr title="Basisregistratie Kadaster">BRK</abbr></a> </li>
+      <li class="nietgereed"> <a class="gereed" href="#BRT"><abbr title="Basisregistratie Topografie">BRT</abbr></a> </li>
+    </ul>
+  </div>
+  <div class="leverancier">
+    <ul>
+      <li class="nietgereed">Pand-ID
+        <div class="statusDoorlevering">(Doorlevering niet gereed)</div>
+        <em>01-01-2016</em></li>
+    </ul>
+    <p><em>Doorlevering is gereed (groen) wanneer het doorgeleverde gegeven in de reguliere producten van de basisregistratie is opgenomen</em></p>
   </div>
 </div>
-
 </body>
 </html>
